# trader

./: .gitignore  README.md  run_bt.prof  宽基指数日线级别冲激函数.xlsx
app/: .gitignore
app/AlphaMining/: Miner.py  README_algo_RL.py  README_parallel_compute.py  Run.py  setup.py
app/Arbitrage/: .gitignore  API_IBKR.py  API_QMT.py  API_TV.py  Arbitrage_Nasdaq.py  Backtest.py  Load.py  Paser_SSE.py  Paser_SZSE.py  Util.py  info_etf_qdii.json  info_pcf_nq.json
app/Chan/: Chan.py
app/DataProvider_API/: .gitignore  License.py  README.py
app/PA/: PA_Core.py  PA_Liquidity.py  PA_Pattern_Chart.py  README.md
app/Util/: MemoryAnalyzer.py  UtilCpt.py  UtilStk.py  combined_data.json
app/chan.py/: .gitignore  Chan.py  ChanConfig.py  README.md  main.py  run.ipynb  setup.py
app/models/: readme.md
app/pandas-ta/: .gitignore  setup.py
app/qlib/: README.md  setup.py
app/ta-lib/: README.md
app/tvdatafeed/: setup.py
app/wtpy/: .gitignore  setup.cfg  setup.py
app/xtquant_API_windows/: .gitignore  README.md  setup.py
database/: README.md
database/DB1_0/: .gitignore  integrity.json  metadata_table.json
database/crypto/: .gitignore  upgrade-binance-klines.sh
database/stock/: .gitignore
doc/Book/: .gitignore
doc/CTA/: Barclay-Flash-Report-sample.xls  readme.txt
doc/CryptoOnChain(TrenchTrading)/: Crypto_Trench.drawio
doc/DataMining/: README
doc/MBA/: curriculum.py
doc/MachineLearning/: ML algo.xlsx  README.py
doc/Sellside 卖方金工研报/: all_papers.txt
doc/TimeSeries/: README.py  REMINDER.txt
misc/: .gitignore  CorrPlot.py  ai.py  configbt.yaml  plot_2_series_lists.py  pytorch_model.py  readme  run_stock.py  test.py
misc/train/: run_predict.ipynb
run/: .gitignore  configbt.yaml  data.json  dtcfg.yaml  readme  run_bt.py  trader_API_database_maintain.py  trader_API_windows copy.py  trader_API_windows.py  trader_CORE_datahelper.py  trader_CORE_windows_linux copy.py
run/AD_Data/: cache_m1.dmb  cache_tick.dmb
run/cfg/: config.yaml  configbt.yaml
run/code_datahelper/: example.py  function_datahelper.cpp  function_datahelper.py  run_bulk_data_import.py
run/common/: commodities.json  contracts.json  etfs.json  fopt_comms.json  stk_options.json  stocks.json
run/cta/: VAE.py  dtype.py  main.py  plot.py  test.py
run/cta/cpp/: .gitignore  CMakeLists.txt  build.sh
run/cta/cpp/include/define/: DataType.hpp
run/cta/cpp/include/label/: LabelCalmar.hpp
run/cta/cpp/include/misc/: misc.hpp
run/cta/cpp/include/model/define/: CBuffer.hpp  DataType.hpp
run/cta/cpp/include/model/label/: LabelCalmar.hpp
run/cta/cpp/include/model/math/autoencoder/: README
run/cta/cpp/include/model/math/mini_model/: CandlePatternHighTF.hpp  CandlePatternLowTF.hpp
run/cta/cpp/include/model/math/minimodel/: PipPatternMiner.hpp  README
run/cta/cpp/include/model/misc/: misc.hpp  print.hpp
run/cta/cpp/include/model/sample/: ResampleRunBar.hpp
run/cta/cpp/include/sample/: VolumeRunBar.hpp
run/cta/cpp/include/umappp/: build.sh
run/cta/cpp/include/umappp/aarand/: aarand.hpp
run/cta/cpp/include/umappp/irlba/: compute.hpp  lanczos.hpp  parallel.hpp  utils.hpp  wrappers.hpp
run/cta/cpp/include/umappp/knncolle/: find_nearest_neighbors.hpp
run/cta/cpp/include/umappp/subpar/: range.hpp  simple.hpp
run/cta/cpp/src/: main.cpp
run/database/: function_db_maintain.py  run_db_maintain.py
run/db/: db_cfg.py  function_db_maintain.py  run_db_maintain.py  util.py
run/junk/: trader_API_windows copy.py  trader_API_windows.py  trader_CORE_windows_linux copy.py
run/run_cpt/: .gitignore  configbt.yaml  dtcfg.yaml  main.py  run.py  run.sh  run_bt_crypto.py
run/run_stk/: .gitignore  Parallel_Process_Core.py  data.db  main.py  run.py  run_bt_stock.py
run/storage/: .gitignore  readme
run/strategies/: Chan_Bsp.py  Cross.py  (+8 more)
scripts/: build_wt_all.sh  build_wtcpp.sh  env_proxy.sh  env_wtcpp.sh  proxy_and_github.sh  宽基指数日线级别冲激函数.xlsx
(+1105 files in other folders)
